fix container height on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ p{
 }
 .container{
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
     background-color: var(--Light-Gray);
